# Self-VM-Builder

./: .gitignore  LICENSE  builder.sh  compile_framework.py  compile_framwork.py  pyproject.toml  readme.md
Debian/: notes.txt
