[tool.poetry]
name = "self-vm-builder"
version = "0.1.0"
description = ""
authors = ["Russell Allen <mail@russell-allen.com>"]
readme = "README.md"
packages = [{include = "self_vm_builder"}]

[tool.poetry.dependencies]
python = "^3.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
